--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/style/rese">
+    <link rel="stylesheet" href="./assets/style/reset.css">
+    <link rel="stylesheet" href="./assets/style/loader.css">
     <link rel="stylesheet" href="./assets/style/main.css">
     <title>BayWebD</title>
 </head>
+<div class="loader-wrapper">
+    <div class="hollowLoader">
+        <div class="largeBox"></div>
+        <div class="smallBox"></div>
+    </div>
+</div>
 <body class="wrapper">
     <nav>
         <ul>
