--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/style/reset.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./assets/vendors/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/style/loader.css">
     <link rel="stylesheet" href="./assets/style/main.css">
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
     <title>BayWebD</title>
 </head>
 <body class="site">
@@ -54,34 +57,18 @@
 
         <div class="parallax-container parallax-wrapper">
             <div class="parallax"><img src="./assets/images/San-Francisco-Wallpaper-9.jpeg"></div>
-            <div class="parallax-content">
-                <div class="parallax-header">
-                    <h1>Located In San Francisco</h1>
-                    <p>ssimus laboriosam ab iste atque quibusdam accusantium assumenda. Cum nulla natus et aperiam?</p>
-                    <div id="map"></div>
-                </div>
+            <div class="parallax-side">
+                <h1>Serving the San Francisco Bay Area</h1>
+                <div id="map"></div>
             </div>
+        </div>
             <br>
         </div>
+        <div class="row">
+            <div class="location-header container">
+           
+        </div>
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    
     <footer class="page-footer">
             <div class="container">
               <div class="row">
@@ -89,12 +76,11 @@
                   <h5 class="white-text">Footer Content</h5>
                   <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
                 </div>
-                <div class="col l4 offset-l2 s12">
-                  <h5 class="white-text">Links</h5>
+                <div class="col l4 offset-l2 s12 social">
                   <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                    <li><a class="social-link" href="#!">j</a></li>
+                    <li><a class="social-link" href="#!">j</a></li>
+                    <li><a class="social-link" href="#!">j</a></li>
                   </ul>
                 </div>
               </div>
@@ -112,7 +98,7 @@
             <div class="smallBox"></div>
         </div>
     </div>
-    <script src="./assets/scripts/mapInit"></script>
+    <script src="./assets/scripts/mapInit.js"></script>
     <script src="./assets/vendors/jquery/jquery-3.4.1.min.js"></script>
     <script src="./assets/vendors/materialize/js/materialize.min.js"></script>
     <script src="./assets/scripts/main.js"></script>
